// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestionComponent Should display the suggestion and use the provided ariaId 1`] = `
<div
  aria-selected={false}
  className="kbnTypeahead__item"
  data-test-subj="autocompleteSuggestion-value-as-promised,-not-helpful"
  id="suggestion-1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  role="option"
>
  <div
    className="kbnSuggestionItem kbnSuggestionItem--value"
  >
    <div
      className="kbnSuggestionItem__type"
    >
      <EuiIcon
        type="kqlValue"
      />
    </div>
    <div
      className="kbnSuggestionItem__text"
      data-test-subj="autoCompleteSuggestionText"
    >
      as promised, not helpful
    </div>
    <div
      className="kbnSuggestionItem__description"
      data-test-subj="autoCompleteSuggestionDescription"
    >
      This is not a helpful suggestion
    </div>
  </div>
</div>
`;

exports[`SuggestionComponent Should make the element active if the selected prop is true 1`] = `
<div
  aria-selected={true}
  className="kbnTypeahead__item active"
  data-test-subj="autocompleteSuggestion-value-as-promised,-not-helpful"
  id="suggestion-1"
  onClick={[Function]}
  onMouseEnter={[Function]}
  role="option"
>
  <div
    className="kbnSuggestionItem kbnSuggestionItem--value"
  >
    <div
      className="kbnSuggestionItem__type"
    >
      <EuiIcon
        type="kqlValue"
      />
    </div>
    <div
      className="kbnSuggestionItem__text"
      data-test-subj="autoCompleteSuggestionText"
    >
      as promised, not helpful
    </div>
    <div
      className="kbnSuggestionItem__description"
      data-test-subj="autoCompleteSuggestionDescription"
    >
      This is not a helpful suggestion
    </div>
  </div>
</div>
`;
